# kasane

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
analyses/datalog/: README.md  inputs.dl  rules.dl
analyses/datalog/lib/: api_models.dl  execution_plan.dl  local_flow.dl  names.dl  summaries.dl
analyses/datalog/packs/: local_taint.dl  summary_exports.dl  unsafe_c_api.dl
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/research_shell/: Cargo.toml
apps/research_shell/src/: main.rs
cmake/: CompilerWarnings.cmake  Install.cmake  LLVM.cmake  Sanitizers.cmake
docs/: architecture.md
engine/facts/cpp/: CMakeLists.txt
engine/facts/cpp/include/kasane/facts/: fact_emitter.hpp
engine/facts/cpp/src/: fact_emitter.cpp
engine/ffi/cpp/: CMakeLists.txt
engine/ffi/cpp/include/kasane/ffi/: kasane_c_api.h
engine/ffi/cpp/src/: kasane_c_api.cpp
engine/ffi/rust/: Cargo.toml
engine/ffi/rust/src/: lib.rs
engine/graph/cpp/: CMakeLists.txt
engine/graph/cpp/include/kasane/graph/: graph.hpp
engine/graph/cpp/src/: graph.cpp
engine/query_runtime/cpp/: CMakeLists.txt
engine/query_runtime/cpp/include/kasane/query_runtime/: finding.hpp
engine/query_runtime/cpp/src/: finding.cpp
frontends/clang/cpp/: CMakeLists.txt
frontends/clang/cpp/src/: fact_extract_action.cpp  fact_extract_action.hpp  main.cpp
frontends/fast/cpp/: CMakeLists.txt
integration/e2e/: Cargo.toml
integration/e2e/src/: lib.rs
integration/e2e/tests/: smoke.rs
schemas/facts/: README.md  v0.dl  v0.md
schemas/sarif/: README.md
testdata/cmake/hello/: CMakeLists.txt
testdata/cmake/hello/include/: hello.hpp
testdata/cmake/hello/src/: hello.cpp  main.cpp
testdata/regression/wrapper_sink/: call.facts  call_arg.facts  cfg_edge.facts  decl.facts  def.facts  node.facts  param_decl.facts  ref.facts  type.facts  type_of.facts  use.facts
testdata/synthetic/: CMakeLists.txt  sample.cpp
